--- a/week-13-offline/package.json
+++ b/week-13-offline/package.json
@@ -5,11 +5,11 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@chandra_sekhar99/medium-common-v1": "^1.0.0",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "hono": "^4.6.20",
-    "prisma": "^6.3.1",
-    "zod": "^3.24.2"
+    "prisma": "^6.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
